# meta_base

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: ci.yml  infra-deploy.yml
docs/: implementation_backlog.md  personal_llm_execution_prd.md
infra/terraform/: README.md
infra/terraform/envs/dev/: outputs.tf  terraform.tfvars.example
infra/terraform/envs/prod/: main.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/bot_vm/: cloud-init.yaml.tftpl  main.tf  outputs.tf  variables.tf
src/personal_assistant/: __main__.py  cli.py  models.py
src/personal_assistant/repositories/: base.py  json_repo.py
src/personal_assistant/services/: importer.py  normalization.py  reporting.py  telegram_bot.py
tests/: test_cli.py  test_importer.py  test_reporting.py  test_telegram_bot.py
